--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^5.0.0
+  equatable: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
