--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^5.0.0
   equatable: ^1.2.0
+  flutter_staggered_grid_view: "^0.2.7"
 
 
   # The following adds the Cupertino Icons font to your application.
