--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^5.0.0
+  flutter_bloc: ^6.0.0
   equatable: ^1.2.0
   flutter_staggered_grid_view: "^0.2.7"
+  graphql_flutter: ^3.0.0
+  provider: ^4.3.1
+  json_serializable: ^3.0.0
+  meta: '>=1.0.0 <2.0.0' # only if you have non nullable fields
+  gql: '>=0.7.3 <1.0.0'
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,6 +40,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  artemis: '>=5.0.0 <6.0.0'
+  build_runner: ^1.5.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
