--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
     git:
       url: git@github.com:winsonhys/flutter_login.git
   google_fonts: ^1.1.0
+  lottie: ^0.5.1
+  shimmer: ^1.1.1
+  cached_network_image: ^2.2.0+1
+  auto_size_text: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/lottie/
     - google_fonts/
 
   # An image asset can refer to one or more resolution-specific "variants", see
