--- a/build.yaml
+++ b/build.yaml
@@ -6,9 +6,13 @@ targets:
     builders:
       artemis:
         options:
-            fragments_glob: graphql/fragments/*.graphql
+            fragments_glob: graphql/fragments/**.graphql
             schema_mapping:
                 - output: lib/api.graphql.dart
                   schema: graphql/schema.gql
-                  queries_glob: graphql/queries/*.graphql
+                  queries_glob: graphql/queries/**.graphql
+                  naming_scheme: pathedWithFields
+                - output: lib/mutations.graphql.dart
+                  schema: graphql/schema.gql
+                  queries_glob: graphql/mutations/*.graphql
                   naming_scheme: pathedWithFields
