--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: longzongbuy
+name: Taag
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -39,6 +39,8 @@ dependencies:
   shimmer: ^1.1.1
   cached_network_image: ^2.2.0+1
   auto_size_text: ^2.1.0
+  firebase_auth: ^0.16.1
+  firebase_core: ^0.4.5
 
 
   # The following adds the Cupertino Icons font to your application.
