--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   shimmer: ^1.1.1
   cached_network_image: ^2.2.0+1
   auto_size_text: ^2.1.0
-  firebase_auth: ^0.16.1
-  firebase_core: ^0.4.5
+  firebase_core: "0.5.0-dev.2"
+  firebase_auth: "0.17.0-dev.1"
 
 
   # The following adds the Cupertino Icons font to your application.
