--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>848234658273-mlahddc7cnht83l3vog7hdoooi214htb.apps.googleusercontent.com</string>
+	<string>848234658273-7aash58debnnfrff6m7vhn80co44nkum.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.848234658273-mlahddc7cnht83l3vog7hdoooi214htb</string>
+	<string>com.googleusercontent.apps.848234658273-7aash58debnnfrff6m7vhn80co44nkum</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBTerRv_AmYmP7NlfJRuY5ceeC_7F-AGdA</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.taag</string>
+	<string>com.taag.mobile</string>
 	<key>PROJECT_ID</key>
 	<string>randevu-signup</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:848234658273:ios:55ff64113fa3412fd7baa0</string>
+	<string>1:848234658273:ios:5e0b12935bf83bf8d7baa0</string>
 	<key>DATABASE_URL</key>
 	<string>https://randevu-signup.firebaseio.com</string>
 </dict>
