--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   firebase_core: "0.5.0-dev.2"
   firebase_auth: "0.17.0-dev.1"
   get: ^3.4.3
-  # shared_preferences: '>=0.5.8 <2.0.0'
+  sliding_up_panel: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
