--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^6.0.0
   equatable: ^1.2.0
   graphql_flutter: ^3.0.0
   provider: ^4.3.1
@@ -54,6 +53,8 @@ dev_dependencies:
     sdk: flutter
   artemis: '6.0.10-beta.1'
   build_runner: ^1.5.0
+  pedantic: ^1.9.0
+  
 
 
 # For information on the generic Dart part of this file, see the
