--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   firebase_auth: "0.17.0-dev.1"
   get: ^3.4.3
   sliding_up_panel: ^1.0.2
+  carousel_slider: ^2.2.1
+  badges: ^1.1.1
+  flushbar: ^1.10.4
+  credit_card_input_form:
+    git:
+      url: git@github.com:Randevoo/Flutter-Credit-Card-Input-Form.git
 
 
   # The following adds the Cupertino Icons font to your application.
