--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   carousel_slider: ^2.2.1
   badges: ^1.1.1
   flushbar: ^1.10.4
+  flutter_icons: ^1.1.0
   credit_card_input_form:
     git:
       url: git@github.com:Randevoo/Flutter-Credit-Card-Input-Form.git
