--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,13 @@ dependencies:
   badges: ^1.1.1
   flushbar: ^1.10.4
   flutter_icons: ^1.1.0
+  flutter_hooks: ^0.13.2
+  stripe_payment: ^1.0.7
   credit_card_input_form:
     git:
       url: git@github.com:Randevoo/Flutter-Credit-Card-Input-Form.git
+  
+
 
 
   # The following adds the Cupertino Icons font to your application.
